--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
+}
+
+.header {
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  color: white;
+  border-bottom: 5px solid white;
+}
+
+.citytextbox {
+  height: 7vh;
+  width: 80vw;
+  font-size: 2rem;
+  text-align: center;
+}
+.suggestionWrapper {
+  height: 30vh;
+  background-color: red;
+  overflow-y: scroll;
+  border: 1px solid lightblue;
+
+}
+.suggestion:hover {
+  color: blue;
+  cursor: pointer;
+}
+.suggestion {
+  background-color: white;
+  width: 80vw;
+  color: black;
+  height: 5vh;
+  border: 1px solid lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.app_body {
+  margin-top: 5vh;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
